--- a/Hito 1.qmd
+++ b/Hito 1.qmd
@@ -61,6 +61,8 @@ Sobre la emisión de acciones como tal se destaca lo dicho anteriormente, estas 
 
 Sobre la emisión de bonos, se destacan varios, como se menciono en la parte de caracterización de la deuda, sin embargo, entrando en actualidad se puede destacar uno que se emitió en México, en donde se emitió un bono por US\$40 millones para financiar proyectos liderados por mujeres (*Banco De Chile Emite Bono Por US\$ 40 Millones Para Financiar Emprendimientos Liderados Por Mujeres*, 2023) por poner algún ejemplo más actual.
 
+Los pasos que se siguen para le emisión de acciones se incluye las etapas previas de aprobación de registro, para luego fijar el precio y crear la oferta publica.
+
 #### Relación con activos derivados
 
 Dado que en el contexto nacional no existen muchos derivados, la situación del Banco de Chile es parecida, pero como el banco posee inversiones en el extranjero, como se menciono en la sección de caracterización de deuda, el Banco tiene acciones fuera, por lo que son activos derivados.
